--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ img.meme-img {
   width: 200px;
 }
 
-img.editImg {
+img.edit-img {
   width: 500px;
   border-width: 1px;
   border-color: black;
@@ -80,10 +80,34 @@ form.meme-form {
         2px 2px 5px #000;
 }
 
-/*.meme > .bottom {
-    bottom: 0;
+input.input-text {
+  margin:5px;
+  border-radius: 1px;
+  height: 20px;
+  font-size: 16px;
 }
 
-.meme > .top {
-    top: 0;
-}*/
+h3 {
+  font-family: "Gill Sans", sans-serif;
+  font-weight: normal;
+}
+
+.meme-portion {
+  margin:20px;
+  padding:10px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+.gallery-portion {
+  margin:20px;
+  padding:10px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+.download-btn {
+  margin:15px;
+}
